# blogDjango

./: .flake8  README.md  pyproject.toml  test_email.py
.github/workflows/: ci.yml
mysite/: db.sqlite3  manage.py  test_email.py
mysite/blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment_comment_blog_commen_created_0e6ed4_idx.py  0004_post_tags.py
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: detail.html  list.html  search.html  share.html
mysite/blog/templatetags/: blog_tags.py
mysite/mysite/: settings.py  urls.py
