[project]
name = "blogdjango"
version = "0.1.0"
description = "Blog application from Antonio Melé's book \"Django 4 By Example\""
authors = [
    {name = "Aleksan.Jhangiryan",email = "lernagorc90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "django (==4.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

